backend/config/piston-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: piston
  namespace: default
spec:
  type: ExternalName
  externalName: host.docker.internal
  ports:
    - port: 2000
      targetPort: 2000
      protocol: TCP
