backend/config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: peachide
  namespace: default
  annotations:
    spec.ingressClassName: traefik
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: peach.benx.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: peachide
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5000
  tls:
  - hosts:
    - peach.benx.dev
    secretName: peachide
