backend/config/practicum.yaml
# Apply this config to forbid all practicum pods from accessing the internet
# and only allow them to access the DNS server on port 53.

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all-egress-practicum
spec:
  podSelector:
    matchLabels:
      egress: practicum-ws
  policyTypes:
    - Egress
  egress:
    - to:
      ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
